feat: update SBOM format defaults to CycloneDX with full format support
Changed default SBOM format from SPDX to CycloneDX across all commands:

Rationale:
- CycloneDX is optimized for security use cases (Provenix's primary goal)
- Native VEX (Vulnerability Exploitability eXchange) support
- Better integration with Grype vulnerability scanner
- OWASP ecosystem alignment for security toolchain

Format Support:
- cyclonedx-json (default) - Security-focused, VEX support
- spdx-json - ISO/IEC 5962:2021 standard, compliance-focused
- syft-json - Syft native format, most detailed metadata

Changes:
- internal/cli/attest.go: Updated format flag default and description
- internal/cli/sbom.go: Updated format flag, help text, and examples
- examples/provenix.yaml: Updated default format with selection guide

All three formats remain fully supported for flexibility across different
compliance and security requirements.

Fixes: Typo in attest.go (atestCmd → attestCmd)

--- a/examples/provenix.yaml
+++ b/examples/provenix.yaml
@@ -13,9 +13,14 @@
 # ==============================================================================
 sbom:
   # Output format for SBOM
-  # Options: spdx-json, cyclonedx-json, syft-json
-  # Default: spdx-json
-  format: spdx-json
+  # Options: cyclonedx-json, spdx-json, syft-json
+  # Default: cyclonedx-json
+  #
+  # Format Selection Guide:
+  #   - cyclonedx-json: Security-focused, native VEX support, optimized for vulnerability scanning
+  #   - spdx-json: Compliance-focused, ISO/IEC 5962:2021 standard, detailed license information
+  #   - syft-json: Syft native format, most detailed metadata, internal use
+  format: cyclonedx-json
 
   # Include file metadata in SBOM (file hashes, permissions, etc.)
   # Default: false (smaller SBOMs, faster generation)
